Update of Occitan language

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -38,7 +38,7 @@ menu:
         add_new_entry: 'Enregistrar un novèl article'
         search: 'Cercar'
         filter_entries: 'Filtrar los articles'
-        # random_entry: Jump to a random entry from that list
+        random_entry: "Sautar a un article a l'azard"
         export: 'Exportar'
     search_form:
         input_label: 'Picatz vòstre mot-clau a cercar aquí'
@@ -88,7 +88,7 @@ config:
         no_token: 'Pas cap de geton generat'
         token_create: 'Creatz vòstre geton'
         token_reset: 'Reïnicializatz vòstre geton'
-        # token_revoke: 'Revoke the token'
+        oken_revoke: 'Revocar lo geton'
         feed_links: 'URLs de vòstres fluxes RSS'
         feed_link:
             unread: 'Pas legits'
@@ -97,20 +97,20 @@ config:
             all: 'Totes'
         feed_limit: "Nombre d'articles dins un flux"
     form_user:
-        # two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
-        # login_label: 'Login (can not be changed)'
+        two_factor_description: "L’activacion de l’autentificacion en dos temps indica que recebretz un còdi per corrièl amb un còdi O que vos cal utilizar una aplicacion OTP (coma Google Authenticator, Authy o FreeOTP) per obténer un còdi a usatge unic cada còp qu’i a una connexion pas fisabla. Podètz pas causir las doas opcions."
+        login_label: 'Identificant (se pòt pas cambiar)'
         name_label: 'Nom'
         email_label: 'Adreça de corrièl'
         two_factor:
-            # emailTwoFactor_label: 'Using email (receive a code by email)'
-            # googleTwoFactor_label: 'Using an OTP app (open the app, like Google Authenticator, Authy or FreeOTP, to get a one time code)'
-            # table_method: Method
-            # table_state: State
-            # table_action: Action
-            # state_enabled: Enabled
-            # state_disabled: Disabled
-            # action_email: Use email
-            # action_app: Use OTP App
+            emailTwoFactor_label: 'En utilizar lo corrièl (recebre un còdi per corrièl)'
+            googleTwoFactor_label: 'En utilizar una aplicacion OTP (Dobrir l’aplicacion, coma Google Authenticator, Authy o FreeOTP, per obténer un còdi a usatge unic)'
+            table_method: Metòde
+            table_state: Estat
+            table_action: Accion
+            state_enabled: Activada
+            state_disabled: Desactivada
+            action_email: Utilizar lo corrièl
+            action_app: Utilizar una aplicacion OTP
         delete:
             title: Suprimir mon compte (Mèfi zòna perilhosa)
             description: Se confirmatz la supression de vòstre compte, TOTES vòstres articles, TOTAS vòstras etiquetas, TOTAS vòstras anotacions e vòstre compte seràn suprimits per totjorn. E aquò es IRREVERSIBLE. Puèi seretz desconnectat.
@@ -136,15 +136,15 @@ config:
         edit_rule_label: 'modificar'
         rule_label: 'Règla'
         tags_label: 'Etiquetas'
-        # card:
-        #     new_tagging_rule: Create a tagging rule
-        #     import_tagging_rules: Import tagging rules
-        #     import_tagging_rules_detail: You have to select the JSON file you previously exported.
-        #     export_tagging_rules: Export tagging rules
-        #     export_tagging_rules_detail: This will download a JSON file that you can use to import tagging rules elsewhere or to backup them.
-        # file_label: JSON file
-        # import_submit: Import
-        # export: Export
+        card:
+            new_tagging_rule: Crear una règla d’etiquetatge
+            import_tagging_rules: Importar de règlas d’etiquetatge
+            import_tagging_rules_detail: Vos cal causir un fichièr JSON qu’importèretz per abans.
+            export_tagging_rules: Exportar las règlas d’etiquetatge
+            export_tagging_rules_detail: Telecargarà un fichièr JSON que podètz utilizar per importar las règlas d’etiquetatge endacòm mai o per las salvagardar.
+        file_label: fichièr JSON
+        import_submit: Importar
+        export: Exportar
         faq:
             title: 'FAQ'
             tagging_rules_definition_title: "Qué significa las règlas d'etiquetas automaticas ?"
@@ -178,14 +178,14 @@ config:
                 matches: 'Teste se un <i>subjècte</i> correspond a una <i>recèrca</i> (non sensibla a la cassa).<br />Exemple : <code>title matches \"football\"</code>'
                 notmatches: 'Teste se <i>subjècte</i> correspond pas a una <i>recèrca</i> (sensibla a la cassa).<br />Example : <code>title notmatches "football"</code>'
     otp:
-        # page_title: Two-factor authentication
-        # app:
-        #     two_factor_code_description_1: You just enabled the OTP two factor authentication, open your OTP app and use that code to get a one time password. It'll disapear after a page reload.
-        #     two_factor_code_description_2: 'You can scan that QR Code with your app:'
-        #     two_factor_code_description_3: 'Also, save these backup codes in a safe place, you can use them in case you lose access to your OTP app:'
-        #     two_factor_code_description_4: 'Test an OTP code from your configured app:'
-        #     cancel: Cancel
-        #     enable: Enable
+        page_title: Autentificacion en dos temps
+        app:
+            two_factor_code_description_1: Avètz pas qu’activat l’autentificacion en dos temps, dobrissètz l’aplicacion OTP e utilizatz aqueste còdi per obténer un senhal unic. Apareisserà aprèp un recargament de pagina.
+            two_factor_code_description_2: 'Podètz numerizar aqueste còdi QR amb l’aplicacion :'
+            two_factor_code_description_3: 'Amai, enregistratz aquestes còdis de recuperacion dins un lòc segur, los podètz utilizar se per cas perdatz l’accès a l’aplicacion OTP :'
+            two_factor_code_description_4: 'Ensajatz un còdi de vòstra aplicacion configurada app :'
+            cancel: Anullar
+            enable: Activar
 
 entry:
     default_title: "Títol de l'article"
@@ -213,7 +213,7 @@ entry:
         export_title: 'Exportar'
     filters:
         title: 'Filtres'
-        status_label: 'Estatus'
+        status_label: 'Estat'
         archived_label: 'Legits'
         starred_label: 'Favorits'
         unread_label: 'Pas legits'
@@ -222,7 +222,7 @@ entry:
         is_public_label: 'Ten un ligam public'
         is_public_help: 'Ligam public'
         language_label: 'Lenga'
-        http_status_label: 'Estatut HTTP'
+        http_status_label: 'Estat HTTP'
         reading_time:
             label: 'Durada de lectura en minutas'
             from: 'de'
@@ -281,10 +281,10 @@ entry:
         delete: "Sètz segur de voler suprimir aqueste article ?"
         delete_tag: "Sètz segur de voler levar aquesta etiqueta de l'article ?"
     metadata:
-        # reading_time: "Estimated reading time"
-        # reading_time_minutes_short: "%readingTime% min"
-        # address: "Address"
-        # added_on: "Added on"
+        reading_time: "Temps de lectura estimat"
+        reading_time_minutes_short: "%readingTime% min"
+        address: "Adreça"
+        added_on: "Ajustat a"
 
 about:
     page_title: 'A prepaus'
@@ -428,16 +428,16 @@ tag:
     list:
         number_on_the_page: "{0} I a pas cap d'etiquetas.|{1} I a una etiqueta.|]1,Inf[ I a %count% etiquetas."
         see_untagged_entries: "Afichar las entradas sens etiquetas"
-        # no_untagged_entries: 'There are no untagged entries.'
+        no_untagged_entries: 'I a pas cap d’article pas etiquetat.'
     new:
         add: 'Ajustar'
         placeholder: "Podètz ajustar mai qu'una etiqueta, separadas per de virgula."
     rename:
-        # placeholder: 'You can update tag name.'
+        placeholder: 'Podètz actualizar lo nom de l’etiqueta.'
 
 export:
     footer_template: '<div style="text-align:center;"><p>Produch per wallabag amb %method%</p><p>Mercés de dobrir <a href="https://github.com/wallabag/wallabag/issues">una sollicitacion</a> s’avètz de problèmas amb l’afichatge d’aqueste E-Book sus vòstre periferic.</p></div>'
-    # unknown: 'Unknown'
+    unknown: 'Desconegut'
 
 import:
     page_title: 'Importar'
@@ -518,7 +518,7 @@ developer:
             redirect_uris_label: 'URLs de redireccion'
             save_label: 'Crear un novèl client'
         action_back: 'Retorn'
-        # copy_to_clipboard: Copy
+        copy_to_clipboard: Copiar
     client_parameter:
         page_title: 'Gestion dels clients API > Los paramètres de vòstre client'
         page_description: 'Vaquí los paramètres de vòstre client.'
@@ -560,8 +560,8 @@ user:
         email_label: 'Adreça de corrièl'
         enabled_label: 'Actiu'
         last_login_label: 'Darrièra connexion'
-        # twofactor_email_label: Two factor authentication by email
-        # twofactor_google_label: Two factor authentication by OTP app
+        twofactor_email_label: Autentificacion en dos temps per corrièl
+        twofactor_google_label: Autentificacion en dos temps per aplicacion OTP
         save: 'Enregistrar'
         delete: 'Suprimir'
         delete_confirm: 'Sètz segur ?'
@@ -603,14 +603,14 @@ flashes:
             tagging_rules_updated: 'Règlas misa a jorn'
             tagging_rules_deleted: 'Règla suprimida'
             feed_token_updated: 'Geton RSS mes a jorn'
-            # feed_token_revoked: 'RSS token revoked'
+            feed_token_revoked: 'Geton RSS revocat'
             annotations_reset: Anotacions levadas
             tags_reset: Etiquetas levadas
             entries_reset: Articles levats
             archived_reset: Articles archivat suprimits
-            # otp_enabled: Two-factor authentication enabled
-            # tagging_rules_imported: Tagging rules imported
-            # tagging_rules_not_imported: Error while importing tagging rules
+            otp_enabled: Autentificacion en dos temps activada
+            tagging_rules_imported: Règlas d’etiquetatge importadas
+            tagging_rules_not_imported: Error en important las règlas d’etiquetatge
     entry:
         notice:
             entry_already_saved: 'Article ja salvagardat lo %date%'
@@ -624,11 +624,11 @@ flashes:
             entry_starred: 'Article ajustat dins los favorits'
             entry_unstarred: 'Article quitat dels favorits'
             entry_deleted: 'Article suprimit'
-            # no_random_entry: 'No article with these criterias was found'
+            no_random_entry: 'Cap d’article pas trobat amb aquestes critèris'
     tag:
         notice:
             tag_added: 'Etiqueta ajustada'
-            # tag_renamed: 'Tag renamed'
+            tag_renamed: 'Etiqueta renomenada'
     import:
         notice:
             failed: "L'importacion a fracassat, mercés de tornar ensajar."
