Add HTML editor to entry editor

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -275,6 +275,7 @@ entry:
         url_label: 'Url'
         origin_url_label: 'Origin url (from where you found that entry)'
         save_label: 'Save'
+        content_label: 'Body'
     public:
         shared_by_wallabag: "This article has been shared by %username% with <a href='%wallabag_instance%'>wallabag</a>"
     confirm:
