--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -33,6 +33,7 @@ menu:
         back_to_unread: 'Tornar als articles pas legits'
         users_management: 'Gestion dels utilizaires'
         site_credentials: 'Identificants del site'
+        # ignore_origin_instance_rules: 'Global ignore origin rules'
         quickstart: "Per ben començar"
     top:
         add_new_entry: 'Enregistrar un novèl article'
@@ -661,3 +662,8 @@ flashes:
             added: 'Identificant per "%host%" ajustat'
             updated: 'Identificant per "%host%" mes a jorn'
             deleted: 'Identificant per "%host%" suprimit'
+    ignore_origin_instance_rule:
+        notice:
+            # added: 'Global ignore origin rule added'
+            # updated: 'Global ignore origin rule updated'
+            # deleted: 'Global ignore origin rule deleted'
