--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -71,7 +71,7 @@ config:
             label: "Vitesse de lecture (mots par minute)"
             help_message: "Vous pouvez utiliser un outil en ligne pour estimer votre vitesse de lecture :"
         action_mark_as_read:
-            label: "Que faire lorsqu'un article est supprimé, marqué comme lu ou marqué comme favoris ?"
+            label: "Que faire lorsqu'un article est supprimé, marqué comme lu ou marqué comme favori ?"
             redirect_homepage: "Retourner à la page d’accueil"
             redirect_current_page: "Rester sur la page actuelle"
         pocket_consumer_key_label: "Clé d’authentification Pocket pour importer les données"
@@ -322,7 +322,7 @@ howto:
     tab_menu:
         add_link: "Ajouter un lien"
         shortcuts: "Utiliser les raccourcis"
-    page_description: "Il y a plusieurs façon d’enregistrer un article :"
+    page_description: "Il y a plusieurs façons d’enregistrer un article :"
     top_menu:
         browser_addons: "Extensions de navigateur"
         mobile_apps: "Applications smartphone"
