--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -430,6 +430,7 @@ tag:
         number_on_the_page: '{0} There are no tags.|{1} There is one tag.|]1,Inf[ There are %count% tags.'
         see_untagged_entries: 'See untagged entries'
         no_untagged_entries: 'There are no untagged entries.'
+        untagged: 'Untagged entries'
     new:
         add: 'Add'
         placeholder: 'You can add several tags, separated by a comma.'
