--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -430,6 +430,7 @@ tag:
         number_on_the_page: '{0} هیچ برچسبی نیست.|{1} یک برچسب هست.|]1,Inf[ %count% برچسب هست.'
         # see_untagged_entries: 'See untagged entries'
         # no_untagged_entries: 'There are no untagged entries.'
+        # untagged: 'Untagged entries'
     new:
         # add: 'Add'
         # placeholder: 'You can add several tags, separated by a comma.'
