cosmetic changes: - http to https - replaced generic .com by specific TLD - updated some dead urls

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -264,7 +264,7 @@ entry:
         provided_by: 'Provided by'
     new:
         page_title: 'Save new entry'
-        placeholder: 'http://website.com'
+        placeholder: 'https://website.com'
         form_new:
             url_label: Url
     search:
