--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -264,7 +264,7 @@ entry:
         # provided_by: 'Provided by'
     new:
         page_title: 'Gem ny artikel'
-        placeholder: 'http://website.com'
+        placeholder: 'https://website.dk'
         form_new:
             url_label: Url
     search:
