--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -264,7 +264,7 @@ entry:
         provided_by: 'Provesit per'
     new:
         page_title: 'Enregistrar un novèl article'
-        placeholder: 'http://website.com'
+        placeholder: 'https://website.cat'
         form_new:
             url_label: Url
     search:
