--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -264,7 +264,7 @@ entry:
         provided_by: 'Proporcionado por'
     new:
         page_title: 'Guardar un nuevo artículo'
-        placeholder: 'https://sitioweb.com'
+        placeholder: 'https://sitioweb.es'
         form_new:
             url_label: URL
     search:
